@startuml
'https://plantuml.com/class-diagram

abstract AbstractBlockPackedWriter
class MonotonicBlockPackedWriter
note top: 编码单调递增源数据
class BlockPackedWriter
note top: 编码一批大数据

class MonotonicBlockPackedReader
class BlockPackedReaderIterator
class BlockPackedReader

AbstractBlockPackedWriter <|-- MonotonicBlockPackedWriter
AbstractBlockPackedWriter <|-- BlockPackedWriter

BlockPackedWriter --> BlockPackedReader #line.dotted : 一次性读取到内存
BlockPackedWriter --> BlockPackedReaderIterator #line.dotted : 设置skip寻址读
MonotonicBlockPackedWriter --> MonotonicBlockPackedReader #line.dotted

@enduml